# authserver

./: Pipfile  README.md  acmjwt.py  app.py  run.sh
oldserver/: Dockerfile  Gopkg.toml  README.md  get_index.go  get_login.go  main.go  post_index.go
oldserver/assets/: get-index.html  post-index.html
oldserver/db/: db.go
oldserver/token/: errors.go  token.go
rust-client/: Cargo.toml  Justfile
rust-client/src/: errors.rs  lib.rs  responses.rs  token.rs
rust-common/: Cargo.toml
rust-common/src/: lib.rs  token.rs
server/: .dockerignore  .gitignore  Cargo.toml  Gopkg.toml  README.md  acmjwt.py  app.py  diesel.toml  get_login.go  get_status.go  main.go  post_index.go  post_validate.go  statics.go
server/assets/: error.html
server/db/: db.go
server/src/: errors.rs  lib.rs  main.rs
server/src/db/: mod.rs  schema.rs
server/src/web/: base.html  endpoints.rs  error.html  get-index.html  mod.rs  post-index.html  util.rs
server/token/: manager.go
