[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A Rust client for the identity service."
name = "acmumn-identity-client"
version = "0.1.0"

[dependencies]
failure = "0.1.2"
futures = "0.1.23"
hyper = "0.12.8"
log = "0.4.4"
mime = "0.3.9"
serde = "1.0.75"
serde_derive = "1.0.75"
serde_json = "1.0.26"
url = "1.7.1"
