[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A Rust server for the identity service."
name = "acmumn-identity-server"
version = "0.1.0"

[dependencies]
acmumn-identity-common = { path = "../rust-common" }
diesel = { version = "1.3.2", default_features = false, features = ["mysql", "r2d2", "serde_json"] }
dotenv = "0.13.0"
failure = "0.1.1"
futures = "0.1.24"
lazy_static = "1.1.0"
log = "0.4.3"
serde = "1.0.74"
serde_derive = "1.0.74"
serde_json = "1.0.27"
structopt = "0.2.10"
syslog = "4.0.0"
tera = "0.11.14"
tokio = "0.1.7"
tokio-threadpool = "0.1.6"
url = "1.7.1"
warp = "0.1.2"
